<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="50dp"
    android:layout_marginTop="50dp"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnInsta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_9_june_instagram"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPattern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_14_june_pattern"
            app:layout_constraintStart_toStartOf="@id/btnInsta"
            app:layout_constraintTop_toBottomOf="@id/btnInsta" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_15_june_recycler_view"
            app:layout_constraintStart_toStartOf="@id/btnPattern"
            app:layout_constraintTop_toBottomOf="@id/btnPattern" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSpotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_16_june_spotify"
            app:layout_constraintStart_toStartOf="@id/btnRecycler"
            app:layout_constraintTop_toBottomOf="@id/btnRecycler" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_19_june_intent"
            app:layout_constraintStart_toStartOf="@id/btnSpotify"
            app:layout_constraintTop_toBottomOf="@id/btnSpotify" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLifeCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_20_june_life_cycle"
            app:layout_constraintStart_toStartOf="@id/btnIntent"
            app:layout_constraintTop_toBottomOf="@id/btnIntent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_21_june_fragments"
            app:layout_constraintStart_toStartOf="@id/btnLifeCycle"
            app:layout_constraintTop_toBottomOf="@id/btnLifeCycle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDialogs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_28_june_dialogs"
            app:layout_constraintStart_toStartOf="@id/btnFragment"
            app:layout_constraintTop_toBottomOf="@id/btnFragment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_30_june_profiles"
            app:layout_constraintStart_toStartOf="@id/btnDialogs"
            app:layout_constraintTop_toBottomOf="@id/btnDialogs" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfileIntent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/july_3_profiles_intent"
            app:layout_constraintStart_toStartOf="@id/btnProfile"
            app:layout_constraintTop_toBottomOf="@id/btnProfile" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnProfileFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/july_4_profile_fragment"
            app:layout_constraintStart_toStartOf="@id/btnProfileIntent"
            app:layout_constraintTop_toBottomOf="@id/btnProfileIntent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnJson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/json"
            app:layout_constraintStart_toStartOf="@id/btnProfileFragment"
            app:layout_constraintTop_toBottomOf="@id/btnProfileFragment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRetrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retrofit"
            app:layout_constraintStart_toStartOf="@id/btnJson"
            app:layout_constraintTop_toBottomOf="@id/btnJson" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCardGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_game"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@id/btnProfileFragment"
            app:layout_constraintTop_toBottomOf="@id/btnProfileFragment" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>