<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clInputs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtInputBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextInput"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/editTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/enter_text_here"
                app:layout_constraintStart_toEndOf="@+id/txtInputBox"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txtTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="10dp"
                android:text="@string/task"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/txtInputBox"
                app:layout_constraintTop_toBottomOf="@+id/txtInputBox" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="@id/editTextInput"
                app:layout_constraintTop_toTopOf="@id/txtTask">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioBtnPanildrome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/panildrome" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioBtnPattern1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_1" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioBtnPattern2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pattern_2" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/radioBtnRevString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reverse_string" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            app:backgroundTint="@null"
            android:background="@drawable/btnstyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toStartOf="@id/btnForm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clInputs" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/form"
            app:backgroundTint="@null"
            android:background="@drawable/btnstyle"
            app:layout_constraintStart_toEndOf="@id/btnSubmit"
            app:layout_constraintTop_toTopOf="@id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            />
        <TextView
            android:id="@+id/textViewResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
