<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".june28dialogs.DialogsActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAlertDialog1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/alert_dialog_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAlertDialog2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/alert_dialog_2"
        app:layout_constraintTop_toBottomOf="@id/btnAlertDialog1"
        app:layout_constraintStart_toStartOf="@id/btnAlertDialog1"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBottomSheet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bottom_sheet_1"
        app:layout_constraintStart_toStartOf="@id/btnAlertDialog2"
        app:layout_constraintTop_toBottomOf="@id/btnAlertDialog2" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBottomSheet2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/bottom_sheet_2"
        app:layout_constraintStart_toStartOf="@id/btnBottomSheet1"
        app:layout_constraintTop_toBottomOf="@id/btnBottomSheet1" />


</androidx.constraintlayout.widget.ConstraintLayout>